# glycan_analysis

./: .gitignore  README.md  hello.py  pyproject.toml
data/IL3_GLY_R1/: .IL3_GLY_R1_conv.xtc_offsets.npz  IL3_GLY_R1_conv.gro
data/IL3_GLY_R1/toppar/: forcefield.itp
data/IL3_GLY_R1_conv/: topol.top
data/IL3_GLY_R1_conv/toppar/: PROA.itp
results/IL3_GLY_R1/: glycan_ranges.txt
src/: dihedral_retrieval.py  glycan_analysis.py  main.py  pca.py  ramachandran.py
